--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
                         </ul>
                     </li>
 
-                    <li class="nav-item"><a class="nav-link" href="/sales">Sales</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/office_sales">Sales</a></li>
                     <li class="nav-item"><a class="nav-link" href="/expenses_list">Expenses</a></li>
                   
                 </ul>
@@ -140,6 +140,7 @@
     <script src="{{ url_for('static', filename='js/base.js') }}"></script>
 </body>
 </html>
+
 
 
 
